# ChangeLog for app-arch/lzip
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/lzip/ChangeLog,v 1.28 2012/07/29 17:08:20 armin76 Exp $

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> lzip-1.13.ebuild:
  alpha/sparc stable wrt #418507

  07 Jun 2012; Brent Baude <ranger@gentoo.org> lzip-1.13.ebuild:
  Marking lzip-1.13 ppc for bug 418507

  06 Jun 2012; Jeff Horelick <jdhore@gentoo.org> lzip-1.13.ebuild:
  marked x86 per bug 418507

  06 Jun 2012; Jeroen Roovers <jer@gentoo.org> lzip-1.13.ebuild:
  Stable for HPPA (bug #418507).

  05 Jun 2012; Brent Baude <ranger@gentoo.org> lzip-1.13.ebuild:
  Marking lzip-1.13 ppc64 for bug 418507

  03 Jun 2012; Agostino Sarubbo <ago@gentoo.org> lzip-1.13.ebuild:
  Stable for amd64, wrt bug #418507

*lzip-1.13 (19 Mar 2012)

  19 Mar 2012; Tim Harder <radhermit@gentoo.org> +lzip-1.13.ebuild,
  +files/lzip-1.13-flags.patch:
  Version bump.

  19 Mar 2012; Tim Harder <radhermit@gentoo.org> -lzip-1.10.ebuild,
  -lzip-1.11.ebuild:
  Remove old.

  02 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> lzip-1.12.ebuild:
  ppc64 stable wrt #396761

  15 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> lzip-1.12.ebuild:
  x86 stable wrt bug #396761

  04 Jan 2012; Brent Baude <ranger@gentoo.org> lzip-1.12.ebuild:
  Marking lzip-1.12 ppc for bug 396761

  02 Jan 2012; Agostino Sarubbo <ago@gentoo.org> lzip-1.12.ebuild:
  Stable for AMD64, wrt bug #396761

  19 Jun 2011; Markus Meier <maekke@gentoo.org> lzip-1.11.ebuild:
  x86 stable, bug #371683

  18 Jun 2011; Markos Chandras <hwoarang@gentoo.org> lzip-1.11.ebuild:
  Stable on amd64 wrt bug #371683

*lzip-1.12 (15 Jun 2011)

  15 Jun 2011; Jeroen Roovers <jer@gentoo.org> +lzip-1.12.ebuild:
  Version bump.

*lzip-1.11 (05 Mar 2011)

  05 Mar 2011; Mike Frysinger <vapier@gentoo.org> +lzip-1.11.ebuild:
  Version bump #357481 by Tim Harder.

  11 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> lzip-1.10.ebuild: