@@ -1,18 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX lzip-1.13-flags.patch 258 SHA256 e52228aa8e1c29ff83c62211a1da2ce771550e98cfb8e3bf05c1d5f44a6b6b4d SHA512 be57c0cee5b885e4d11e251d479b88bee2dc21ecf8ea14067fe5c5c0014a69110438b0f9ede92da765da511cc51889fc97861428c81d0b6f5523782abf6a1588 WHIRLPOOL e163f07989259fcf5225afb6285016b1f05005415bcdd9f494757d8fcffe47736b1bdb857c2e8f7e90920b74658c14d4e14e7d83565e7a608ddf657b3706ee2b
 AUX lzip-1.9-build.patch 624 SHA256 3d04ac2d0f803dc16659309d1bf20a0698a19f8dd567b9455583c828b78633f5 SHA512 add4ec83d643535e4fc198c93e55d9beefb1bfd7da942bcb6e0605a554815b84d93816c2644f66a1f2473e17b10151c290619981ea125c175cd1d2bf0754aad2 WHIRLPOOL 70afb1276216cc211da39f34028e29280630ca6a1ecdbdc07738258ff19609b4b412beda0d349c14921bfbf8ee09a6efa824458c851484c2bd4592496f8a5273
 DIST lzip-1.12.tar.gz 103815 SHA256 eabc590d02d404dc1a1cc8e2777ed398370174b68edb22043c8ca0b209dfcd27 SHA512 eab1e94f4efa3d995685db6e4eff3268f7c54fa2afba1b717775de329dff91d94bd707d447a11edb44067c9418129141e50cb93e4dfba24136470ee0828b1b6a WHIRLPOOL 99fce034b2d40b5fb96a5db8596547da535a52522167d2a1a35897dba5f8776e1a65706776bf2fe2476b62aaa992a1fcbe4b2eb3990712bc5737091da460645f
 DIST lzip-1.13.tar.gz 90380 SHA256 c73d36c0a926b71d484eacc192262a1d209674e3f903016f2c74a2bcbc5c28ac SHA512 b321ebe1f93304f1db5f008ac8c840fc2cf0b9bfd5d3d01072f1aad3ee6f33991fd10f76d22e2c6960c6ba8a2b78f5f005d958fc3bc5724deef41e7da8d170a3 WHIRLPOOL 0c02e6a3e481376e2896c48dbca01f59ab8f6902b3890a989f3c7374d7c361625e61935bed5acec3a35db67832ffb6004845c446fb438aed920cae72f2f202cc
+DIST lzip-1.14.tar.gz 80699 SHA256 7ff5cc521560edb2a0a6cdf258cf3afdaeb1dbcc354d96d011d0dd7ec584cbe7 SHA512 85eefecf67cc451e5417faf9fe5d54e0847ec633ae852ef60f0913d197b8ffa8e80359124b0a56ac11ed5687ceee3e111019a7fb3c62da662e1bcc3575359c88 WHIRLPOOL ae374c5fe53487619218b2f5c71701bec8266feb09226fd24681d672b3cee19621da2024207c9f68153c51dc23651a4ac32485abdf378fb04044c8484804d9a3
 EBUILD lzip-1.12.ebuild 713 SHA256 12a7a1a1b397cb1a618f52a79b7637e08ad784483e4fe9f9eb952c92048b3f9f SHA512 6a1b5c3e7f39018226a9f74e27df33f1f1e82c989cfd74dde029c3679a557b3e2619416e3e5cc7cf8071b3ee09a9fcae96dae00c8a2aea80cb835221ef87f075 WHIRLPOOL 472be0dfd2b257c8ec38a4d8d8cd32a59b23b64b91e5d0acab01c323cc02a3f318079b2410dc5bc45db2f76af5676d11a0dbbba3ccc30ba171df838ea0412ec6
 EBUILD lzip-1.13.ebuild 610 SHA256 e885a60d123eff835b27fc26821ba09424765f66149265a510505faea823329d SHA512 ae2e05fc985ed787ffab5d9cdd90f92249bd5b495fa877147dafdd97a43bc812e714170c53051268237ad4fd3e0c109dc4e4118d10b674b2ae56664e0e3c3473 WHIRLPOOL c2ed10cb2e2e90c306d04c3cb7bfde2c08f702fafeaf6c1c0ddc625326a88182bc2e4988551ea28ad9515c6e8aab58ffe0758fceadfab71b3c9c60342503b653
-MISC ChangeLog 3306 SHA256 f628a462ab6effe5b1e1c9c89a8deb2675b2f2a5c42aa54cf7a05d1aff580c17 SHA512 248b70b319deeb1b426be1b0232783ca604a336b5f825bae9fb267e948d7ac722b3f5ec3db5996fdd48001274594c69bde324a966bce0a71cd64d22e68aac050 WHIRLPOOL 0526051a612c2240c26a905b7d3f4d6dc3138545a55a7d1d72bd5cb377c30afc6e61675212af11663dbc790592c3c23780fc6570b6ef05f721cfec0e2cc3bbbe
+EBUILD lzip-1.14.ebuild 724 SHA256 9452588f32d588fa70b45fe489b493ef1f7dde9a9016d379edcc96a8fb2c4462 SHA512 c7d2ea01b4e0db3b8f65fc131b214324152d4c93ac2e5c3b4866e8b702f251bbf1effcfcbc757c81b47c3c7e03d7f134312f1bb6e1c31e44ab9ed3c17aa52dcc WHIRLPOOL 61bb5a9b5658968e43532deadc00c88059d75284307b08d32be6465ac2c214d81fcf369a276be1bf44c52d94d6de5615279101794e7d24d825c05238800cc8ac
+MISC ChangeLog 3419 SHA256 422d216e190ba2812a5dd2dc2470b0191e3349b34c92b7e710e21c9c295ac62f SHA512 d67086b6e2c0ef04c1ae61a1c130cc0b22abc1056aad99fbed1e3f1892ec87e4497ef201948c9bf872d3503b05cc33d564364c48793cb8e33d0f3c30e7578f2f WHIRLPOOL cebb140b880902648f874e2e6eda1fe0198d71abbf3cb064b31c238a4179cf7d1a1b7c1c84e537c6c071d159d634501e5eb3249c10a8055fcd6a32139e0df813
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAlAVbgoACgkQuQc30/atMkCNWwCgjl0X65Gjzif2MRlozEGBO+w1
-q5oAn3wyJA7m7cVqkhnOBwRSM6aUakTQ
-=S0tG
+iQEcBAEBCAAGBQJROA0IAAoJEEqz6FtPBkyjuXgH/356UQspPv3VoO3vjsJgEIx8
+itgcG+aC5ebktnYAnR7YI0Ye785aTM/Gih6vtnbVjqDOCRE8zPUz+vUTsAqFHxEB
+/NuX0Q71Y/DeCQkbIL1m1r4mbnDz/LVfVR99sjUVd9g1UYBZlDYac9pDvpdOo81M
+uU6IEmNXO7Tv4kHpc1c6CGPmXI4OSbC7tutNIbUb8Ao9ZWcungUJdvko9qcD0grw
+TPWv+HQMLbBtyDBjd17wt3Erud9Hain3Fh+SGFWVeZt+NZ41y/BWbMLDrvPVG2/+
+9WFnWftmnmuYtdca9O4Rsxbm1IjgQN54eT18SsNXV8tJWQfLurmAWcGesFL2QF4=
+=le95
 -----END PGP SIGNATURE-----
