@@ -2,23 +2,17 @@
 Hash: SHA256
 
 DIST ninja-1.1.0.tar.gz 132523 SHA256 a9964fd5d22d34d476e9e10f1281f094a9cb53797ae0e02356a5138c853c7c5e SHA512 b894f147dce2fde0c39f75523e4c36271630b176e7418896d44c5c29d04c798e42e80ea378787cbcd4b5acae949feb7ee7310a99a5fe80881b1edfa22d31d235 WHIRLPOOL 711ef53756fa01b12f2ef161bebf475f3b9bda666d1b3b4af4c16465323d4e828e5e9ad130473bf46364b7dedd6c62c3433fba7013ed91a21e484d9cd2d1bb5e
-EBUILD ninja-1.1.0.ebuild 1962 SHA256 baf7bc19bf3285631bb9a9ea76b20bf09af1abf0d9a55c8029528cd902e1c99e SHA512 6f166c18481bce493bd4b55afdc89e6d6b6011f25ed24faa1cc004a74539f38d960428697e871cd8ed4183775cdd711fcb839f749af26989ae8d8dac30f18068 WHIRLPOOL 5d50bd57c3aaff7519258138e7ee45d0f9d930f574a2b95c44a24286537ad8600e21960db4ac592bb3679b30d2aee2aff6aebf48cd19865fc1454af19c44d036
-MISC ChangeLog 1453 SHA256 9d85f5f22a73332c5f0599bf86546cbd1934f87dd6e83d06df324fdb9344874f SHA512 db7e94162cae9c7d3dd8d2b931f6cff66d918253ab6999c46f8747b1c8a4626b638a3cf2bdfd6fa85c3f978461adaee20483d517105803dd6ace49cca416512a WHIRLPOOL b4ca7f1d843cd7075724912f69cce88482c68cbc3b3800d6c6c0112a3f8986b982f50fa6eac6071019fccc144167a16de4ca15dddf9e242aaeb32d0427003984
+EBUILD ninja-1.1.0.ebuild 1973 SHA256 9b843d5b913bca8065de9746aa4022f72bebcc7ab14964d01d9f0f35bd67de0c SHA512 1d1091f76db224be7e2be826a2477015d33cea6fa81e36014b45f479637d2edb300701c9fa85fbed19de676b78eba51735226ea52046b89a1c56ecf345ff5284 WHIRLPOOL e8b44f08daedb7d76a4218b46c63885e0c73a329df988e7f80034c070242bef7dd020c64763919d374fed2400de345afadfef8d979b27b41fcbdea62693ec63b
+MISC ChangeLog 1560 SHA256 afaa96990f64c8d80639b4a79d3a0e8cde66d9aa1fd82962a2264196889c0816 SHA512 61957968fa0a2fdcfbade7e97cf22626a92a58e0fd1b51f08b7b8135969e5bf24cf7e6a82bb27a0954c3000aff1ca4f0e4df080f0b98257d2b8aedaaffce154f WHIRLPOOL 2cecb5f63f81ff29e567c29b6bb3a5f97cc3be6f223f7ffd9ad19831c178e3174618d34a50efad368b32f66391483da5624d91804789c2735d55ae0a1b0eb69e
 MISC metadata.xml 315 SHA256 eed44c7b2fc68f71723be738ba56e06e069aa24f74e73b8f4d17f6ed697e5671 SHA512 fb30b0f54c0a890d90df2e6dbb28c0be447e0f18136210d743004147f1201db8be8e86e43fd4650803c508e180e6e572cc72c62b4f1fea4c1cc1356180808735 WHIRLPOOL 9225be9539e078b5e076d7169253d65c61bd73c91a33f8422f492b7fde931aee3a06fee36446deba25713e5053c1d0fced1eded22b46b24037ce63f28421fa65
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRNzJLAAoJEOf+E+/4L5LmGmEP/35jtIpxJnKPeuS21UOTEtLc
-lZjG4bOMdjbygCdlykFNBAbNI4nR2/xZoKVWrIwBICYip5CCA+OkYhMbc5FBzxO1
-yWnfVanJiKy8YZ7e+gKYmO7SpTfVFQqqO7JwbmeYYSROk377yxVEMEMF3qcxiXnc
-KByPWKF6eIgWt+woUAT8UwFupofuBhQmGPcedWPYtPqdOt9+2JUc0fJJGYcQuBjp
-Lo0X46ioTIlGS6q3bh6BQPJDultDe+ANaPmA/dgK2T0TDXx2C4XEZpgoUpUYBQAW
-gLGslL8mHFkNtw0IYE5B+Jv89cqRhIMo9wYdJzCWMgEBtocSHWuzBe48z+rJHLk/
-IgJseGuXNJN/bKXJYGzJm/JT8ZJHD+h7sEx1HsvMe7SQM3IAtKUzI08EM8pZPL6h
-fc1r6FCl1E1BDO0WgWJRCta88PZKKZAFuSfiH9x6UZJdRUSXKV3uYjnXWVK1wTon
-e+5qfacJbVOR2R73awlLAUyrT1hFpbbLgsgp25/Z0aWf17ftK0FF9kKf5JJ5h/oM
-riccxNgP81iG4jEnwFmzuZxa3wPLgFRD2DqT3dR8a+OG6+hLZmqxS4+xoKxoSELP
-godvweXpgRme+QQJOtvWfVckt+w+zed/SUfecjIJaHxmadBjeKkoedJczgGR+Ns5
-FT4SLdI0k1h3Q+2vNSzU
-=p2WU
+iQEcBAEBCAAGBQJRN/JUAAoJEOeBhlrCAAWGhO0H/RSY8TrsldMW4FAwjf7htUy0
+wslwh8QVzkaa7m5BbtlRs2Qst5ysa9a88HkYQtTeLkb7vXJcFWakzAUfIHfPBVP4
+uIvKEXqn3waJhjpGBotC2WGiAT6x53UkxT0X29XZzUqvrUnTG7xtKNxwCzQx9WuN
+8R4m7kxYVuzOClWN5K+F4UJyUk4+N+cN38jRoXWTtDfw9VhiTwkweXD79Q6T6a5b
+/iAInjeRA+3T1S25LhHhGg6w/NqpwigVcJGaGYJNFjsHCTaNOLCHf8OuwH78mGsU
+DNoQR8vG0BdM+ef24g2DOqIN+DcomMTM7yo5IBlT0MpTalXSAdjBj195Yzr4AFw=
+=+N+d
 -----END PGP SIGNATURE-----
