@@ -6,19 +6,21 @@ AUX postupgrade-en-0.6.txt 1271 SHA256 110724101fb7f712fec3e44023d1562de235dee45
 DIST roundcubemail-0.8.4.tar.gz 3723638 SHA256 9f52a0f4ad69df2da9636304ac3c072a13fbda197e7cfbc98a3516dda0fdc234 SHA512 a0d76584a59ea035be0ffa637956dc56745c32f3c84037e46b41b92650fe50d89db0be12103ae49a62a8a4286c9db05df3f13bb4453db9cff551baeddd92fb0a WHIRLPOOL d3dac3d89ad47c55049125433de107889ea28e4e9bda3839bab484271fc0ed179f55e04b454f021fd815dab2f68e59f3f0bcd94d76f7215f79d9dc3276fb3fbd
 DIST roundcubemail-0.8.5.tar.gz 3724025 SHA256 cd35d7c8c7886af7d2853ddd0970c57b5db037dc757647858a7a906d874e9824 SHA512 a1cb1e847a616a3d1c415610268b08377afb7230a3daf286ccf7b992bae61df00ef94455ab0770057793d148725c595db9d61f9f3dba80f1d77c668f7a5267cb WHIRLPOOL 5a6333172608f3ef3cfc85bbfa51450cdb7a7ca6a5d844ac2a125cd539daffe6c8d4b4a84d5c1bc57afbeceffd9bdfb72e6534e59d4d14d7eb08b2f582018848
 DIST roundcubemail-0.9-beta.tar.gz 3496947 SHA256 3cd2544f577b49b1e76c3f718b39f61f84f7a2561bc7c0b2d735c483ab2e9994 SHA512 f4f8b1b5a89ecf23176431955b15170179c57d9861e5dbe04cee447dfc93f9a1ff03d21fb1352f443ea31ea4bbb82cc6e3c98f6fc39c0c244e13a96a87f00bd7 WHIRLPOOL 5471d61766e61fb7639cec814582cc32b82859623f8378b5808e2f3a9e3c9d6ace590df7b05a186b2b57bea3ab6638e616ef29525264444bedef5128d369a271
+DIST roundcubemail-0.9-rc.tar.gz 3707673 SHA256 9a5332aa0e97a849e642f19df0762dc335e60c299bb0da01fd2e111af05cc05f SHA512 3b4a026bd5df57f5beea9c94f2fe06ff17c03ee76a2a062fc5f1c60cb187ec5ccce2eb00d6dbc573eefa34d657c7b9076c11a70a59d305e85b2a6badfaee4053 WHIRLPOOL f3fd9c43280111ba0880d229d4004aecae8c1991f0081cd7d74897070ec5e19b12885c6f172fc625923a536c5689e70970d4bf3d11b7e8b40a1a12e12bd4ca97
 EBUILD roundcube-0.8.4.ebuild 1950 SHA256 44b4694254005425b99a6fb26d6765d45c2d3c77d4ef3e57370c69783181c895 SHA512 c3bca8e270fd39e6af0c8e101a6095ad3483bef369e7b0e5e4d1f6a9836446c6f62fd0b19d809c0782512574113e96aaf50d75409b5e8e2571c20ba22534ac01 WHIRLPOOL 473a50dc04cca72d3f014c9f688eecd666ad3569924bd41599fc4de1cfe9325e8f0799c960a75f4956548e12791720cee8a1ccc0c4bf23e6d9543e67b872920e
 EBUILD roundcube-0.8.5.ebuild 1957 SHA256 12bd0614fc9bc0fe660ec92cbcff35b1791ae56401583dcbc043845ca697fdb0 SHA512 1a4c9099dcc0d884e88660b3c65a5c8b19aa6eb849a1c27bc9d5b646910ea979b54effe49d4ea21df382eae8920cf4fdf55d377c76ee8fdacd0bb4ef0621f90f WHIRLPOOL 79d20c9cfc2e59fc36482fdcf2b69ed38d270ed18cf66f5233e4890c9b452d95ecf761f9e7a12ee2df84d7579b29ff9418fba0945a25ef2cd2197aa55dd65f6d
 EBUILD roundcube-0.9_beta.ebuild 1871 SHA256 183a065c76741c41dee31275d51c2487e7da5d01fab51a0ecaeb2ea089cfa758 SHA512 4182f678725bcdc9a59592551db2e1ef3de12ba8878147193cf51193d41ffdc1d2e0165060323405387d9ea5efeae46860feb84d0b4e9ae782150930ad7d420e WHIRLPOOL f154a256eaa31045ca95621649b430fa6786bd659c8c066219a23d9161565cadc665f77a6ec4bf014a00ecbb156d1e44736a1ab8573aed6be5b9490375774ab1
-MISC ChangeLog 13875 SHA256 f436343815dadfdef8e8d60ec83dcb28d53e72ed0914ce2088f6e8c289e0affb SHA512 e0a3afd25da2c7338d294572bdcb39b6f56fb6e2cd9d82144c661f3db678077ff2515e9beee0091290c7d1383a43a12c7d496cf68f1f077f4df141fe444d93d4 WHIRLPOOL 0e63b7c67c9c26025fd429558ec3edad5722d34055aff73b73ff573a5e151dccff3233ae59579c9b21ea3bcdc771e56663945ef5a00db2983333ce912c83baa1
+EBUILD roundcube-0.9_rc.ebuild 1867 SHA256 3b337ee8744431aa5c5166f9b32e296b24c780f2baffd8d27162e8d08017d693 SHA512 d18221aba43830912bc990575fb45118042fcc483dd0ce6253e48563fee2da7398a2953ddb24da152abd8aa21319bb517db9a39fc4c5174b882c2ad3c686b8bf WHIRLPOOL ec0f4474d9b70c45827c50e4867d7c87c2861372a51f0c3481f229f643e40d01644867a19b913cec64e9a37198a4faab41b20964cd79c28a5ec32cb3dd23341c
+MISC ChangeLog 14000 SHA256 6b92ec126d1f0501a8068059e6ebbcc4f5e942dac44b27a07c63554f6cf73838 SHA512 8e3c556f5e712442ac80f7405a3a7e0cd3574abeea04196593f8b21609e535af0feeba439d8d85670c6da4ecd8e8ef475ca361e01ecfcd0dd29410afbc50e160 WHIRLPOOL a09af7fbb2dcd2e09e39a9b79b61c31b71cfdbe3b5c8f10d1421c5982b39ac12e1eb57286669a252b5c4428fbabd6d890d996cff4a60a2e6bc10d937fdf08cdb
 MISC metadata.xml 161 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4 SHA512 da8733f12ac4bebcfa485138fd9880683c1196efc0312a588ffce412ed14c1dd831e005129b6598d027af44d381fceb844453a433d0c982348e21f2d9c49f52e WHIRLPOOL 2b56ebef4f0870596c32c35c96e6dfbc911f6a3d8fe0e8c463df76dfa73dde112948c814b9a9ee996b7d71a85e4a723033ee3b92f4cde0f31d0770404d7dba61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRBiQIAAoJEEqz6FtPBkyjbekH/1Evy1dmMqLgWAP/MO9PwP/g
-GCX9nuuvX5BLNQU551FO24vU+Ds9PZmIrutGJKahYdyc5eQv76tn/EM5H/Hw3kJe
-mx6mE0l4LKr3tTPqpW6bf3K4nI+XKPNyPsKZ0YsMe7ZHDEZZfCNreIOlqmAt1QSp
-ZiXzx8Zdxr7ED9As9gBiX+jUVEIrR7p9gGeo8uwxhBPHlU44/Dv/4IcSh0zjf3qF
-2aN12XfybmMEs6mVuDNtQ1CKNaWGvnDSDR9PcW7SJlthQCIasDVHVGB2w6mZIoAR
-orXT5oPeO8f47txXY340iqpwUbygBwS4OGQcJTC5UuLFOfMm0YPByZJxZ8bJ9h0=
-=zoZy
+iQEcBAEBCAAGBQJROA90AAoJEEqz6FtPBkyj0WoH/3+HHOc8thxLgp7koZvdnoMZ
+bjlOJ9TTc0f0e8hHlWd0hzulkxbgIw+PPAKdI9cmOG5+nRhAvTONDj0dBFPSMvPj
+gI2Iu666WwiQsAoWstgdWSu3Jogql3w9GNb9391x2ZKxseoYijDfcQ/sOpc+8pYY
+nK23vJvvPqxEV5egHmZs0PJUdhNjP4QouCJ66CfgSKjEQ94Vy1qcp57wzy3c0lrX
+SfjEBjkIzEHREdiXkdPvpGBGlyhiQ4WAnVbSPWhXPE3d/ufXPe78VcVuT8sMXuOm
+Lk0ajedGpBYVZElCQJ1yxIMUC+KXyKAXO6l9Ly4liWS/Iq5TymywGxnOboK0qGg=
+=8HX+
 -----END PGP SIGNATURE-----
