@@ -1,0 +1,10 @@
+DEFINED_PHASES=configure
+DESCRIPTION=lossless data compressor based on the LZMA algorithm
+EAPI=4
+HOMEPAGE=http://www.nongnu.org/lzip/lzip.html
+KEYWORDS=~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-3
+SLOT=0
+SRC_URI=http://download.savannah.gnu.org/releases-noredirect/lzip/lzip-1.14.tar.gz
+_eclasses_=multilib	ded93e450747134a079e647d888aa80b	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e
+_md5_=7c6da64537965c245ab6219c08b2bee8
