@@ -4,10 +4,10 @@ DESCRIPTION=A small build system similar to make.
 EAPI=4
 HOMEPAGE=http://github.com/martine/ninja
 IUSE=doc emacs vim-syntax zsh-completion
-KEYWORDS=~alpha ~amd64 ~arm ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos
+KEYWORDS=~alpha ~amd64 ~arm ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
 LICENSE=Apache-2.0
 RDEPEND=emacs? ( virtual/emacs ) vim-syntax? ( || ( app-editors/vim app-editors/gvim ) ) zsh-completion? ( app-shells/zsh ) !<net-irc/ninja-1.5.9_pre14-r1 =dev-lang/python-2*
 SLOT=0
 SRC_URI=mirror://github/martine/ninja/tarball/v1.1.0 -> ninja-1.1.0.tar.gz
 _eclasses_=bash-completion-r1	fcc2dafb65a2b662dd4b076f2103f6a6	elisp-common	21605c8f0b2a5ffa3233faeb3f9df309	multilib	ded93e450747134a079e647d888aa80b	python	89dff4d72d57f253f9f78b7f8c5d55c8	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	vcs-snapshot	3facff03591093044e38f21285a02129
-_md5_=ebcac1276d43ed2dd1c6fe4c886f9221
+_md5_=ccbc9981136cd7c5f911df1158da7d96
