@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/roundcube
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/roundcube/ChangeLog,v 1.100 2013/01/28 07:08:49 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/roundcube/ChangeLog,v 1.101 2013/03/07 03:54:19 radhermit Exp $
+
+*roundcube-0.9_rc (07 Mar 2013)
+
+  07 Mar 2013; Tim Harder <radhermit@gentoo.org> +roundcube-0.9_rc.ebuild:
+  Version bump.
 
 *roundcube-0.8.5 (28 Jan 2013)
 
