@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/lzip
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/lzip/ChangeLog,v 1.28 2012/07/29 17:08:20 armin76 Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/lzip/ChangeLog,v 1.29 2013/03/07 03:44:05 radhermit Exp $
+
+*lzip-1.14 (07 Mar 2013)
+
+  07 Mar 2013; Tim Harder <radhermit@gentoo.org> +lzip-1.14.ebuild:
+  Version bump.
 
   29 Jul 2012; Raúl Porcel <armin76@gentoo.org> lzip-1.13.ebuild:
   alpha/sparc stable wrt #418507
